--- a/01. Presentation/Tech.Interview.Api/appsettings.json
+++ b/01. Presentation/Tech.Interview.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "InterviewDB": "Server=myServer;Database=myDb1;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
