--- a/01. Presentation/Tech.Interview.Api/Tech.Interview.Api.csproj
+++ b/01. Presentation/Tech.Interview.Api/Tech.Interview.Api.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\02. Application\Tech.Interview.Application\Tech.Interview.Application.csproj" />
     <ProjectReference Include="..\..\03. Infrastructure\Tech.Interview.Infrastructure\Tech.Interview.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Tech.Interview.Persistence\Tech.Interview.Persistence.csproj" />
