--- a/01. Presentation/Tech.Interview.Api/appsettings.json
+++ b/01. Presentation/Tech.Interview.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "InterviewDB": "Server=myServer;Database=myDb1;Trusted_Connection=True;"
+    "InterviewDB": "Data Source=.\\SQLEXPRESS;Initial Catalog=InterviewDB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
