--- a/03. Infrastructure/Tech.Interview.Infrastructure/Tech.Interview.Infrastructure.csproj
+++ b/03. Infrastructure/Tech.Interview.Infrastructure/Tech.Interview.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\02. Application\Tech.Interview.Application\Tech.Interview.Application.csproj" />
+  </ItemGroup>
+
 </Project>
